# restudCLI

./: .gitignore  CLAUDE.md  JINJA2_IMPLEMENTATION.md  README.md  README_structure.md  Template answers  init_ex_for_lfs.sh  initialize_replication.sh  install.sh  migrate_packages.py  prompt_examples.py  pyproject.toml  report_template.yaml  rshell.fish  template-answers.txt  template_answers.yaml  test_prompt.py  test_report_status.py  test_shell.py  test_tab_completion.py
.config/fish/functions/: .zenodo_api_key  restud.fish
.config/restud/: DCAS-template.yaml  DCAS_render.py  DCAS_scheme.py  accept2.txt  pyproject.toml  render.py  report-template.yaml  report.yaml  response1.txt  template.yaml
src/restud/: __init__.py  cli.py  render.py  render_aml.py  render_jinja2.py  tracking.py  zenodo.py
src/restud/templates/: __init__.py  accept1.jinja2  accept1.txt  accept2.jinja2  accept2.txt  base-snippets.toml  report-sample.toml  report-template.yaml  report.aml  response-accept.jinja2  response-needRP.jinja2  response-needRP.txt  response-revise.jinja2  response1.jinja2  response1.txt  response2.jinja2  response2.txt  template-answers.yaml
