[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "restud"
version = "1.2.1"
description = "REStud workflow management CLI tool"
authors = [
    {name = "Gergely Attila Kiss"},
    {name = "Miklós Koren"},
    {name = "Claude (Anthropic)"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "yamlcore>=0.0.1",
    "requests>=2.25.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "importlib-resources>=1.3.0; python_version<'3.9'",
]

[project.scripts]
restud = "restud.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/restud"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.hatch.build]
include = [
    "src/restud/templates/*",
]